--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.24.0",
     "colors": "1.4.0",
     "dotenv": "^10.0.0",
-    "inquirer": "^8.2.0"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "^8.54.0",
+    "inquirer": "^8.2.0",
+    "prettier": "^3.1.0"
   }
 }
