--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "Richard_allcca_llano@hotmail.com",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^1.7.2",
     "colors": "1.4.0",
     "dotenv": "^10.0.0",
+    "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint": "^8.54.0",
-    "inquirer": "^8.2.0",
-    "prettier": "^3.1.0"
+    "eslint-plugin-import": "^2.29.1",
+    "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
